Closed
Bug 233212
Opened 22 years ago
Closed 22 years ago
Private colormap not working with gtk2 and/or xft builds
Categories
(Core Graveyard :: GFX: Gtk, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: tor, Assigned: tor)
Details
Attachments
(2 files)
|
4.60 KB,
patch
|
blizzard
:
review+
bryner
:
superreview+
chofmann
:
approval1.7a+
|
Details | Diff | Splinter Review |
|
676 bytes,
patch
|
blizzard
:
review+
bryner
:
superreview+
dveditz
:
approval1.7a+
|
Details | Diff | Splinter Review |
Two problems:
* gtk2's gdkrgb uses the colormap of the drawable instead of an internal
global colormap. We weren't setting the colormap of any of the
temporary or offscreen pixmaps.
* xft fonts look odd using a private colormap because Render wasn't
designed to work with that (uses the global colormap). Patch
disables xft's use of Render if using a private colormap.
Attachment #140689 -
Flags: superreview?(bryner)
Attachment #140689 -
Flags: review?(blizzard)
Updated•22 years ago
|
Attachment #140689 -
Flags: review?(blizzard) → review+
Updated•22 years ago
|
Attachment #140689 -
Flags: superreview?(bryner) → superreview+
Comment on attachment 140689 [details] [diff] [review]
fix private colormaps
Fixes the problem of not working properly with private colormaps
that cropped up again in gtk2.
Attachment #140689 -
Flags: approval1.7a?
Comment 3•22 years ago
|
||
Comment on attachment 140689 [details] [diff] [review]
fix private colormaps
a=chofmann for 1.7a
Attachment #140689 -
Flags: approval1.7a? → approval1.7a+
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment on attachment 141313 [details] [diff] [review]
don't set colormap on 1-bit stretch
Don't try setting the colormap when scaling the alpha mask of
an image. Prevents spewage of these gdk errors:
(Gecko:26630): Gdk-CRITICAL **: file gdkdraw.c: line 264
(gdk_drawable_set_colormap): assertion `cmap == NULL || gdk_drawable_get_depth
(drawable) == cmap->visual->depth' failed
Attachment #141313 -
Flags: superreview?(bryner)
Attachment #141313 -
Flags: review?(blizzard)
Attachment #141313 -
Flags: approval1.7a?
Comment 7•22 years ago
|
||
Comment on attachment 141313 [details] [diff] [review]
don't set colormap on 1-bit stretch
a=dveditz for 1.7a
Attachment #141313 -
Flags: approval1.7a? → approval1.7a+
Updated•22 years ago
|
Attachment #141313 -
Flags: superreview?(bryner) → superreview+
Comment 8•22 years ago
|
||
so is everything checked in here? lets mark fixed if so. thanks
No - still waiting for blizzard's review of the follow-up patch.
Updated•22 years ago
|
Attachment #141313 -
Flags: review?(blizzard) → review+
| Assignee | ||
Comment 10•22 years ago
|
||
Checked in.
Status: REOPENED → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•