Bug 233212 - private colormaps not working with gtk2 or xft builds. r=blizzard sr=bryner a=chofmann