gfx/src/gtk/nsImageGTK.cpp
@@ -516,12 +516,16 @@ XlibRectStretch(PRInt32 srcWidth, PRInt32 srcHeight,
 
 //  fprintf(stderr, "scaleY Start/End = %d %d\n", scaleStartY, scaleEndY);
 
-  if (!skipHorizontal && !skipVertical)
+  if (!skipHorizontal && !skipVertical) {
     aTmpImage = gdk_pixmap_new(nsnull,
                                endColumn-startColumn,
                                scaleEndY-scaleStartY,
                                aDepth);
-  
+#ifdef MOZ_WIDGET_GTK2
+    gdk_drawable_set_colormap(GDK_DRAWABLE(aTmpImage), gdk_rgb_get_colormap());
+#endif
+  }
+ 
   dx = abs((int)(yd2-yd1));
   dy = abs((int)(ys2-ys1));
   sx = sign(yd2-yd1);
@@ -1544,6 +1548,9 @@ void nsImageGTK::CreateOffscreenPixmap(PRInt32 aWidth, PRInt32 aHeight)
     // Create an off screen pixmap to hold the image bits.
     mImagePixmap = gdk_pixmap_new(nsnull, aWidth, aHeight,
                                   gdk_rgb_get_visual()->depth);
+#ifdef MOZ_WIDGET_GTK2
+    gdk_drawable_set_colormap(GDK_DRAWABLE(mImagePixmap), gdk_rgb_get_colormap());
+#endif
   }
 
     // Ditto for the clipmask
@@ -1758,6 +1765,9 @@ NS_IMETHODIMP nsImageGTK::DrawTile(nsIRenderingContext &aContext,
 
     tileImg = gdk_pixmap_new(nsnull, aTileRect.width, 
                              aTileRect.height, drawing->GetDepth());
+#ifdef MOZ_WIDGET_GTK2
+    gdk_drawable_set_colormap(GDK_DRAWABLE(tileImg), gdk_rgb_get_colormap());
+#endif
     TilePixmap(mImagePixmap, tileImg, aSXOffset, aSYOffset, tmpRect,
                tmpRect, PR_FALSE);
 
